--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	<script type="text/javascript">
 	$(function () {
 		initcanvas();
-		loadscene(new GolfScene(canvas));
+		loadscene(new StartScene(canvas));
 	});
 	$( window ).resize(function() {
 		fixdimensions();
