--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <head>
 	<title>Lawyer up bitch</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-	<script type="text/javascript" src="lib/Box2D.js"></script>
-	<script type="text/javascript" src="src/script.js"></script>
-	<script type="text/javascript" src="src/speechbubble.js"></script>
+	<script type="text/javascript" src="https://raw.githubusercontent.com/explodi/lawyergolf/master/lib/Box2D.js"></script>
+	<script type="text/javascript" src="https://raw.githubusercontent.com/explodi/lawyergolf/master/src/script.js"></script>
+	<script type="text/javascript" src="https://raw.githubusercontent.com/explodi/lawyergolf/master/src/speechbubble.js"></script>
 
-	<script type="text/javascript" src="src/levels.js"></script>
-	<script type="text/javascript" src="src/ball.js"></script>
-	<script type="text/javascript" src="src/entity.js"></script>
-	<script type="text/javascript" src="src/person.js"></script>
-	<script type="text/javascript" src="src/startscene.js"></script>
+	<script type="text/javascript" src="https://raw.githubusercontent.com/explodi/lawyergolf/master/src/levels.js"></script>
+	<script type="text/javascript" src="https://raw.githubusercontent.com/explodi/lawyergolf/master/src/ball.js"></script>
+	<script type="text/javascript" src="https://raw.githubusercontent.com/explodi/lawyergolf/master/src/entity.js"></script>
+	<script type="text/javascript" src="https://raw.githubusercontent.com/explodi/lawyergolf/master/src/person.js"></script>
+	<script type="text/javascript" src="https://raw.githubusercontent.com/explodi/lawyergolf/master/src/startscene.js"></script>
 
-	<script type="text/javascript" src="src/golfscene.js"></script>
-	<script type="text/javascript" src="src/lawyer.js"></script>
+	<script type="text/javascript" src="https://raw.githubusercontent.com/explodi/lawyergolf/master/src/golfscene.js"></script>
+	<script type="text/javascript" src="https://raw.githubusercontent.com/explodi/lawyergolf/master/src/lawyer.js"></script>
 
 	<style type="text/css">
 	body {
